Added --enable-preview in docker build